--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,31 @@
 {
+  "name": "sbuckpesch/medium-php-reader",
+  "type": "library",
+  "description": "Easy SDK for reading Medium posts of a user by parsing mediums JSON feed.",
+  "keywords": [
+    "medium",
+    "php-sdk",
+    "read",
+    "posts",
+    "user"
+  ],
+  "homepage": "https://buckpesch.io",
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "Sebastian Buckpesch",
+      "email": "s.buckpesch@gmail.com",
+      "homepage": "http://buckpesch.io"
+    }
+  ],
+  "require-dev": {
+    "codeception/codeception": "^2.2"
+  },
+  "config": {
+    "preferred-install": "dist",
+    "optimize-autoloader": true
+  },
+  "prefer-stable": true,
   "require": {
     "php": ">=7.0",
     "guzzlehttp/guzzle": "^6.3"
