--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     }
   ],
   "require-dev": {
-    "codeception/codeception": "^2.2"
+    "phpunit/phpunit": "4.0.*"
   },
   "config": {
     "preferred-install": "dist",
@@ -30,9 +30,7 @@
     "php": ">=7.0",
     "guzzlehttp/guzzle": "^6.3"
   },
-  "autoload": {
-    "psr-0": {
-      "Medium\\": "source/"
-    }
+  "psr-4": {
+    "Sbuckpesch\\Medium\\": "src"
   }
 }
